[project]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "jzhu457",email = "jzhu457@gatech.edu"}
]
readme = "README.md"
requires-python = "^3.9,<3.12"
dependencies = [
    "langchain-community (>=0.3.18,<0.4.0)",
    "langgraph (>=0.3.1,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
